welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:7: error: Invalid literal number
for (i<-1to8)
        ^Runner:15: error: ')' expected but '}' found.
	}
        ^