welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while(!estFaceMur)
{
	avance()
}

for (i<-1to8)
{
	gauche()
	avance()
	
}
